# peakGreenSurvey

./: .gitignore  analysis.ipynb  package-lock.json  package.json  points.csv  pyproject.toml  results.csv
public/: index.html
src/: App.js  index.css  index.js  questions.js
src/pages/: ImageComparisonTask.js  ImageComparisonTutorial.js  ImageSortingTask.js  ImageSortingTutorial.js  submit.js
surveyCode/: package-lock.json  package.json  tailwind.config.js
surveyCode/src/: App.js  questions.js
surveyCode/src/pages/: ImageComparisonTask.js  ImageComparisonTutorial.js  submit.js
