[tool.poetry]
name = "peakgreensurvey"
version = "0.1.0"
description = ""
authors = ["mamzi <mohammadreza.osouli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
